JBMETA-223 add support for JPA 2 parsing on trunk

--- a/src/test/resources/schema2class.properties
+++ b/src/test/resources/schema2class.properties
@@ -14,3 +14,4 @@ jboss_5_1.xsd org.jboss.metadata.ejb.jboss.JBoss51MetaData
 
 # JPA
 persistence_1_0.xsd org.jboss.metadata.jpa.spec.PersistenceMetaData
+persistence_2_0.xsd org.jboss.metadata.jpa.spec.PersistenceMetaData
