--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,14 @@
     <testOutputDirectory>${profile.testOutputDirectory}</testOutputDirectory>
     <plugins>
       <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.6</source>
+          <target>1.6</target>
+        </configuration>
+      </plugin>
+      
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.4.3</version>
@@ -91,6 +99,13 @@
   <!-- Compile Dependencies -->
   <dependencies>
 
+    <!-- FIXME: use org.jboss.javaee:jboss-ejb-api -->
+    <dependency>
+      <groupId>org.jboss.ejb3</groupId>
+      <artifactId>jboss-ejb3-api</artifactId>
+      <version>3.1.0-SNAPSHOT</version>
+    </dependency>
+    
     <dependency>
       <groupId>org.jboss.metadata</groupId>
       <artifactId>jboss-metadata-common</artifactId>
