--- a/pom.xml
+++ b/pom.xml
@@ -103,7 +103,7 @@
     <dependency>
       <groupId>org.jboss.ejb3</groupId>
       <artifactId>jboss-ejb3-api</artifactId>
-      <version>3.1.0-SNAPSHOT</version>
+      <version>3.1.0</version>
     </dependency>
     
     <dependency>
