--- a/pom.xml
+++ b/pom.xml
@@ -129,13 +129,13 @@
     <dependency>
       <groupId>org.jboss.metadata</groupId>
       <artifactId>jboss-metadata-common</artifactId>
-      <version>2.0.0-SNAPSHOT</version>
+      <version>2.0.0-alpha-10</version>
     </dependency>
 
     <dependency>
       <groupId>org.jboss.metadata</groupId>
       <artifactId>jboss-metadata-common</artifactId>
-      <version>2.0.0-SNAPSHOT</version>
+      <version>2.0.0-alpha-10</version>
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
