JBMETA-252 Added metadata support for @Startup and init-on-startup for singleton beans

--- a/.settings/org.maven.ide.eclipse.prefs
+++ b/.settings/org.maven.ide.eclipse.prefs
@@ -1,5 +1,5 @@
-#Thu Nov 26 12:37:11 CET 2009
-activeProfiles=eclipse
+#Fri Dec 04 17:56:18 IST 2009
+activeProfiles=
 eclipse.preferences.version=1
 fullBuildGoals=process-test-resources
 includeModules=false
