[JBMETA-267] EE 6 module name concept in ejb metadata

--- a/src/test/resources/schema2class.properties
+++ b/src/test/resources/schema2class.properties
@@ -3,6 +3,7 @@ ejb-jar_1_1.dtd org.jboss.metadata.ejb.spec.EjbJar1xMetaData
 ejb-jar_2_0.dtd org.jboss.metadata.ejb.spec.EjbJar20MetaData
 ejb-jar_2_1.xsd org.jboss.metadata.ejb.spec.EjbJar21MetaData
 ejb-jar_3_0.xsd org.jboss.metadata.ejb.spec.EjbJar30MetaData
+ejb-jar_3_1.xsd org.jboss.metadata.ejb.spec.EjbJar31MetaData
 jboss org.jboss.metadata.ejb.jboss.JBoss50DTDMetaData
 jboss_3_0.dtd org.jboss.metadata.ejb.jboss.JBoss50DTDMetaData
 jboss_3_2.dtd org.jboss.metadata.ejb.jboss.JBoss50DTDMetaData
