--- a/pom.xml
+++ b/pom.xml
@@ -141,7 +141,7 @@
     <dependency>
       <groupId>org.jboss.spec.javax.ejb</groupId>
       <artifactId>jboss-ejb-api_3.1_spec</artifactId>
-      <version>1.0.0-SNAPSHOT</version>
+      <version>1.0.0.Beta1</version>
     </dependency>
     
     <dependency>
