--- a/src/test/resources/schema2class.properties
+++ b/src/test/resources/schema2class.properties
@@ -4,12 +4,14 @@ ejb-jar_2_0.dtd org.jboss.metadata.ejb.spec.EjbJar20MetaData
 ejb-jar_2_1.xsd org.jboss.metadata.ejb.spec.EjbJar21MetaData
 ejb-jar_3_0.xsd org.jboss.metadata.ejb.spec.EjbJar30MetaData
 ejb-jar_3_1.xsd org.jboss.metadata.ejb.spec.EjbJar31MetaData
-jboss org.jboss.metadata.ejb.jboss.JBoss50DTDMetaData
+jboss org.jboss.metadata.ejb.jboss.JBoss60DTDMetaData
 jboss_3_0.dtd org.jboss.metadata.ejb.jboss.JBoss50DTDMetaData
 jboss_3_2.dtd org.jboss.metadata.ejb.jboss.JBoss50DTDMetaData
 jboss_4_0.dtd org.jboss.metadata.ejb.jboss.JBoss50DTDMetaData
 jboss_4_2.dtd org.jboss.metadata.ejb.jboss.JBoss50DTDMetaData
 jboss_5_0.dtd org.jboss.metadata.ejb.jboss.JBoss50DTDMetaData
+jboss_5_1_eap.dtd org.jboss.metadata.ejb.jboss.JBoss51EAPDTDMetaData
+jboss_6_0.dtd org.jboss.metadata.ejb.jboss.JBoss60DTDMetaData
 jboss_5_0.xsd org.jboss.metadata.ejb.jboss.JBoss50MetaData
 jboss_5_1.xsd org.jboss.metadata.ejb.jboss.JBoss51MetaData
 
