--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,13 @@
   <groupId>org.jboss.metadata</groupId>
   <artifactId>jboss-metadata-ejb</artifactId>
   <packaging>jar</packaging>
-  <version>2.0.0-SNAPSHOT</version>
+  <version>2.0.0-alpha-13</version>
   <name>JBoss Metadata EJB</name>
   <url>http://www.jboss.org</url>
   <description>The common JavaEE metadata classes</description>
   <scm>
-    <connection>scm:svn:http://anonsvn.jboss.org/repos/jbossas/projects/metadata/ejb/trunk/</connection>
-    <developerConnection>scm:svn:https://svn.jboss.org/repos/jbossas/projects/metadata/ejb/trunk/</developerConnection>
+    <connection>scm:svn:http://anonsvn.jboss.org/repos/jbossas/projects/metadata/ejb/tags/jboss-metadata-ejb-2.0.0-alpha-13</connection>
+    <developerConnection>scm:svn:https://svn.jboss.org/repos/jbossas/projects/metadata/ejb/tags/jboss-metadata-ejb-2.0.0-alpha-13</developerConnection>
   </scm>
 
     <distributionManagement>
