--- a/pom.xml
+++ b/pom.xml
@@ -177,6 +177,12 @@
         </exclusion>          
       </exclusions>       
     </dependency>
+    
+    <dependency>
+    	<groupId>org.jboss</groupId>
+    	<artifactId>jbossxb</artifactId>
+    	<version>2.0.2.Beta7</version>
+    </dependency>
 
     <!-- Test Dependencies -->
     <dependency>
