--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,13 @@
           <name>JBoss Releases Repository</name>
           <url>https://repository.jboss.org/nexus/service/local/staging/deploy/maven2/</url>
         </repository>
+
+		<snapshotRepository>
+			<id>jboss-snapshots-repository</id>
+			<name>JBoss Snapshots Repository</name>
+			<url>https://repository.jboss.org/nexus/content/repositories/snapshots/</url>
+		</snapshotRepository>			
+        
     </distributionManagement>
 
   <build>
