--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <groupId>org.jboss.metadata</groupId>
   <artifactId>jboss-metadata-ejb</artifactId>
   <packaging>jar</packaging>
-  <version>2.0.0-alpha-16</version>
+  <version>2.0.0-SNAPSHOT</version>
   <name>JBoss Metadata EJB</name>
   <url>http://www.jboss.org</url>
   <description>The common JavaEE metadata classes</description>
