--- a/merge/pom.xml
+++ b/merge/pom.xml
@@ -26,7 +26,7 @@
 
   <parent>
     <groupId>org.jboss.as</groupId>
-    <artifactId>jboss-as-parent</artifactId>
+    <artifactId>jboss-as-parent-metadata</artifactId>
     <version>7.0.0.Beta1-SNAPSHOT</version>
   </parent>
 
