--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
     </parent>
     
     <groupId>org.jboss.as</groupId>
-    <artifactId>jboss-as-parent</artifactId>
+    <artifactId>jboss-as-parent-metadata</artifactId>
     <version>7.0.0.Beta1-SNAPSHOT</version>
 
     <name>JBoss Application Server: Metadata Aggregator</name>
@@ -49,6 +49,7 @@
         <maven.min.version>3.0-beta-1</maven.min.version>
 
         <!-- Dependency versions. Please keep alphabetical -->
+        <version.org.jboss.spec.javax.servlet.jboss-servlet-api_3.0_spec>1.0.0.Beta2</version.org.jboss.spec.javax.servlet.jboss-servlet-api_3.0_spec>
     </properties>
 
     <modules>
