--- a/web/pom.xml
+++ b/web/pom.xml
@@ -26,7 +26,7 @@
 
   <parent>
     <groupId>org.jboss.as</groupId>
-    <artifactId>jboss-as-parent</artifactId>
+    <artifactId>jboss-as-parent-metadata</artifactId>
     <version>7.0.0.Beta1-SNAPSHOT</version>
   </parent>
 
@@ -97,6 +97,12 @@
       <groupId>org.jboss.logging</groupId>
       <artifactId>jboss-logging-spi</artifactId>
       <version>2.2.0.CR1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.jboss.spec.javax.servlet</groupId>
+      <artifactId>jboss-servlet-api_3.0_spec</artifactId>
+      <version>${version.org.jboss.spec.javax.servlet.jboss-servlet-api_3.0_spec}</version>
     </dependency>
 
     <!-- Test Dependencies -->
