--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,13 @@
 
     <build>
         <plugins>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.0-beta-9</version>
+            </plugin>
+
             <plugin>
                 <artifactId>maven-checkstyle-plugin</artifactId>
             </plugin>
@@ -96,6 +103,7 @@
 
             </plugins>
         </pluginManagement>
+
     </build>
 
     <dependencyManagement>
