Explicitly specify the version for maven-enforcer-plugin to prevent random build failures resulting from SNAPSHOT plugin versions

--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
     <plugins>
         <plugin>
             <artifactId>maven-enforcer-plugin</artifactId>
+            <version>1.0-beta-1</version>
             <executions>
                 <!--  Enforce JDK6 -->
                 <execution>
