Add context.xml equivalent elements. I think this should be enough ... Also tweak the build and remove the EE annotations for data sources. New xsd not done yet.

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -117,6 +117,12 @@
        <version>3.0.0.GA</version>
     </dependency>
 
+    <dependency>
+       <groupId>org.jboss.spec.javax.annotation</groupId>
+       <artifactId>jboss-annotations-api_1.1_spec</artifactId>
+       <version>1.0.0.Final</version>
+    </dependency>
+
     <!-- Test Dependencies -->
     <dependency>
       <groupId>junit</groupId>
