--- a/web/pom.xml
+++ b/web/pom.xml
@@ -27,13 +27,13 @@
   <parent>
     <groupId>org.jboss.as</groupId>
     <artifactId>jboss-as-parent-metadata</artifactId>
-    <version>7.0.0.Alpha1</version>
+    <version>7.0.1.Alpha1-SNAPSHOT</version>
   </parent>
 
   <groupId>org.jboss.as.metadata</groupId>
   <artifactId>jboss-metadata-web</artifactId>
   <packaging>jar</packaging>
-  <version>7.0.0.Alpha1</version>
+  <version>7.0.1.Alpha1-SNAPSHOT</version>
 
   <name>JBoss Metadata Web</name>
 
@@ -90,7 +90,7 @@
     <dependency>
       <groupId>org.jboss.as.metadata</groupId>
       <artifactId>jboss-metadata-common</artifactId>
-      <version>7.0.0.Alpha1</version>
+      <version>7.0.1.Alpha1-SNAPSHOT</version>
     </dependency>
 
     <dependency>
