--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
     
     <groupId>org.jboss.metadata</groupId>
     <artifactId>jboss-as-parent-metadata</artifactId>
-    <version>7.0.0.Alpha2</version>
+    <version>7.0.0.Alpha3-SNAPSHOT</version>
 
     <name>JBoss Application Server: Metadata Aggregator</name>
     <description>JBoss Application Server: Metadata Aggregator</description>
