--- a/web/pom.xml
+++ b/web/pom.xml
@@ -119,6 +119,16 @@
       <version>1.1.4.GA</version>
       <scope>test</scope>
     </dependency>
+
+
+    <dependency>
+      <groupId>org.jboss.metadata</groupId>
+      <artifactId>jboss-metadata-common</artifactId>
+      <version>7.0.0.Alpha3-SNAPSHOT</version>
+      <classifier>tests</classifier>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
 </project>
