--- a/ejb/pom.xml
+++ b/ejb/pom.xml
@@ -76,26 +76,6 @@
                <includes>
                   <include>**/*TestCase.java</include>
                </includes>
-               <!-- TODO: Remove these excludes once the tests are fixed -->
-               <excludes>
-                  <exclude>org/jboss/test/metadata/ejb/SchemaVersionUnitTestCase.java</exclude>
-                  <exclude>org/jboss/metadata/ejb/test/jndibindingpolicy/unit/JNDIBindingPolicyTestCase.java</exclude>
-                  <exclude>org/jboss/test/metadata/annotation/ejb3/AnnotationEjb3UnitTestCase.java</exclude>
-                  <exclude>org/jboss/test/metadata/ejb/JBoss5xEverythingUnitTestCase.java</exclude>
-                  <exclude>org/jboss/test/metadata/jbmeta66/unit/GenericBeanWithHomeTestCase.java</exclude>
-                  <exclude>org/jboss/test/metadata/jpa/v2/PersistenceMDUnitTestCase.java</exclude>
-                  <exclude>org/jboss/test/metadata/ejb/JBoss51EverythingUnitTestCase.java</exclude>
-                  <exclude>org/jboss/test/metadata/xml/EjbXmlValidationUnitTestCase.java</exclude>
-                  <exclude>org/jboss/metadata/ejb/test/schedule/unit/ScheduleTestCase.java</exclude>
-                  <exclude>org/jboss/test/metadata/annotation/ejb3/JBossAnnotationEjb3UnitTestCase.java</exclude>
-                  <exclude>org/jboss/metadata/ejb/test/jbmeta307/unit/SessionSynchronizationTestCase.java</exclude>
-                  <exclude>org/jboss/metadata/ejb/test/jbmeta321/unit/StatefulTimeoutTestCase.java</exclude>
-                  <exclude>org/jboss/test/metadata/ejb/EjbJarJBossMergeEverythingUnitTestCase.java</exclude>
-                  <exclude>org/jboss/test/metadata/ejb/EjbJar3xUnitTestCase.java</exclude>
-                  <exclude>org/jboss/test/metadata/jpa/PersistenceMDUnitTestCase.java</exclude>
-                  <exclude>org/jboss/test/metadata/jbmeta119/unit/LocalBindingsUnitTestCase.java</exclude>
-                  <exclude>org/jboss/test/metadata/ejb/JBoss51EAPDefaultJMSRAUnitTestCase.java</exclude>
-               </excludes>
             </configuration>
          </plugin>
       </plugins>
@@ -164,5 +144,62 @@
       </dependency>
 
    </dependencies>
+
+   <profiles>
+      <profile>
+         <!-- TODO: Remove this profile once the tests are fixed -->
+         <id>disabled-tests</id>
+         <build>
+            <plugins>
+               <plugin>
+                  <groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven-surefire-plugin</artifactId>
+                  <version>2.4.3</version>
+                  <configuration>
+                     <printSummary>true</printSummary>
+                     <disableXmlReport>false</disableXmlReport>
+                     <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                     <testFailureIgnore>false</testFailureIgnore>
+                     <includes>
+                        <include>**/*TestCase.java</include>
+                     </includes>
+                     <excludes>
+                        <exclude>org/jboss/test/metadata/ejb/SchemaVersionUnitTestCase.java</exclude>
+                        <exclude>org/jboss/metadata/ejb/test/jndibindingpolicy/unit/JNDIBindingPolicyTestCase.java</exclude>
+                        <exclude>org/jboss/test/metadata/annotation/ejb3/AnnotationEjb3UnitTestCase.java</exclude>
+                        <exclude>org/jboss/test/metadata/ejb/JBoss5xEverythingUnitTestCase.java</exclude>
+                        <exclude>org/jboss/test/metadata/jbmeta66/unit/GenericBeanWithHomeTestCase.java</exclude>
+                        <exclude>org/jboss/test/metadata/jpa/v2/PersistenceMDUnitTestCase.java</exclude>
+                        <exclude>org/jboss/test/metadata/ejb/JBoss51EverythingUnitTestCase.java</exclude>
+                        <exclude>org/jboss/test/metadata/xml/EjbXmlValidationUnitTestCase.java</exclude>
+                        <exclude>org/jboss/metadata/ejb/test/schedule/unit/ScheduleTestCase.java</exclude>
+                        <exclude>org/jboss/test/metadata/annotation/ejb3/JBossAnnotationEjb3UnitTestCase.java</exclude>
+                        <exclude>org/jboss/metadata/ejb/test/jbmeta307/unit/SessionSynchronizationTestCase.java</exclude>
+                        <exclude>org/jboss/metadata/ejb/test/jbmeta321/unit/StatefulTimeoutTestCase.java</exclude>
+                        <exclude>org/jboss/test/metadata/ejb/EjbJarJBossMergeEverythingUnitTestCase.java</exclude>
+                        <exclude>org/jboss/test/metadata/ejb/EjbJar3xUnitTestCase.java</exclude>
+                        <exclude>org/jboss/test/metadata/jpa/PersistenceMDUnitTestCase.java</exclude>
+                        <exclude>org/jboss/test/metadata/jbmeta119/unit/LocalBindingsUnitTestCase.java</exclude>
+                        <exclude>org/jboss/test/metadata/ejb/JBoss51EAPDefaultJMSRAUnitTestCase.java</exclude>
+                        <exclude>org/jboss/test/metadata/ejb/JBoss60DefaultJMSRAUnitTestCase.java</exclude>
+                        <exclude>org/jboss/test/metadata/jbmeta133/unit/DefaultClusterConfigUnitTestCase.java</exclude>
+                        <exclude>org/jboss/test/metadata/annotation/ejb3/runas/RunAsUnitTestCase.java</exclude>
+                        <exclude>org/jboss/test/metadata/annotation/jbmeta99/PostXmlProcessingUnitTestCase.java</exclude>
+                        <exclude>org/jboss/test/metadata/ejb/JBossEnterpriseBeanOverrideUnitTestCase.java</exclude>
+                        <exclude>org/jboss/test/metadata/ejb/EjbJar11UnitTestCase.java</exclude>
+                        <exclude>org/jboss/test/metadata/ejb/EjbJarJBossMergeActivationConfigUnitTestCase.java</exclude>
+                        <exclude>org/jboss/test/metadata/jbmeta56/unit/EnvironmentTestCase.java</exclude>
+                        <exclude>org/jboss/test/metadata/ejb/JBoss50UnitTestCase.java</exclude>
+                        <exclude>org/jboss/test/metadata/ejb/JBoss42UnitTestCase.java</exclude>
+                        <exclude>org/jboss/test/metadata/ejb/EjbJar21UnitTestCase.java</exclude>
+                        <exclude>org/jboss/test/metadata/jbmeta42/unit/Default2xNamingStrategyTestCase.java</exclude>
+                     </excludes>
+                  </configuration>
+               </plugin>
+            </plugins>
+         </build>
+      </profile>
+
+   </profiles>
 
 </project>
