--- a/common/pom.xml
+++ b/common/pom.xml
@@ -119,11 +119,11 @@
       <version>2.1.4</version>
     </dependency>
 
-    <dependency>
-       <groupId>org.jboss.javaee</groupId>
-       <artifactId>jboss-ejb-api</artifactId>
-       <version>3.0.0.GA</version>
-    </dependency>
+     <dependency>
+        <groupId>org.jboss.spec.javax.ejb</groupId>
+        <artifactId>jboss-ejb-api_3.1_spec</artifactId>
+        <version>1.0.0.Final</version>
+     </dependency>
 
     <dependency>
        <groupId>org.jboss.spec.javax.annotation</groupId>
