--- a/ejb/pom.xml
+++ b/ejb/pom.xml
@@ -87,7 +87,7 @@
       <dependency>
          <groupId>org.jboss.spec.javax.ejb</groupId>
          <artifactId>jboss-ejb-api_3.1_spec</artifactId>
-         <version>1.0.0.Beta2</version>
+         <version>1.0.0.Final</version>
       </dependency>
 
       <dependency>
