--- a/ejb/pom.xml
+++ b/ejb/pom.xml
@@ -91,8 +91,20 @@
       </dependency>
 
       <dependency>
+         <groupId>org.jboss.spec.javax.interceptor</groupId>
+         <artifactId>jboss-interceptors-api_1.1_spec</artifactId>
+         <version>1.0.0.Final</version>
+      </dependency>
+
+      <dependency>
          <groupId>org.jboss.metadata</groupId>
          <artifactId>jboss-metadata-common</artifactId>
+      </dependency>
+
+      <dependency>
+         <groupId>org.jboss.logging</groupId>
+         <artifactId>jboss-logging</artifactId>
+         <version>3.0.0.Beta4</version>
       </dependency>
 
       <dependency>
@@ -111,6 +123,10 @@
                <groupId>org.jboss.metadata</groupId>
                <artifactId>jboss-metadata</artifactId>
             </exclusion>
+            <exclusion>
+               <groupId>org.jboss.javaee</groupId>
+               <artifactId>jboss-ejb-api</artifactId>
+            </exclusion>
          </exclusions>
       </dependency>
 
@@ -118,6 +134,12 @@
          <groupId>org.jboss</groupId>
          <artifactId>jbossxb</artifactId>
          <version>2.0.2.Beta7</version>
+         <exclusions>
+            <exclusion>
+               <groupId>org.jboss.logging</groupId>
+               <artifactId>jboss-logging-spi</artifactId>
+            </exclusion>
+         </exclusions>
       </dependency>
 
       <!-- Test Dependencies -->
