use jboss instead jfclere.

--- a/pom.xml
+++ b/pom.xml
@@ -173,9 +173,9 @@
     </pluginRepositories>
 
     <scm>
- 	<connection>scm:git:git@github.com:jfclere/metadata.git</connection>
- 	<url>scm:git:git@github.com:jfclere/metadata.git</url>
- 	<developerConnection>scm:git:git@github.com:jfclere/metadata.git</developerConnection>	
+ 	<connection>scm:git:git@github.com:jboss/metadata.git</connection>
+ 	<url>scm:git:git@github.com:jboss/metadata.git</url>
+ 	<developerConnection>scm:git:git@github.com:jboss/metadata.git</developerConnection>	
     </scm>
 
 </project>
