--- a/appclient/pom.xml
+++ b/appclient/pom.xml
@@ -92,6 +92,7 @@
       <dependency>
          <groupId>org.jboss.metadata</groupId>
          <artifactId>jboss-metadata-common</artifactId>
+         <version>${project.version}</version>
       </dependency>
 
       <dependency>
@@ -103,6 +104,7 @@
       <dependency>
          <groupId>org.jboss.metadata</groupId>
          <artifactId>jboss-metadata-common</artifactId>
+         <version>${project.version}</version>
          <type>test-jar</type>
          <scope>test</scope>
       </dependency>
