--- a/ejb/pom.xml
+++ b/ejb/pom.xml
@@ -98,6 +98,7 @@
       <dependency>
          <groupId>org.jboss.metadata</groupId>
          <artifactId>jboss-metadata-common</artifactId>
+         <version>${project.version}</version>
       </dependency>
 
       <dependency>
@@ -109,6 +110,7 @@
       <dependency>
          <groupId>org.jboss.metadata</groupId>
          <artifactId>jboss-metadata-common</artifactId>
+         <version>${project.version}</version>
          <type>test-jar</type>
          <scope>test</scope>
       </dependency>
