--- a/common/pom.xml
+++ b/common/pom.xml
@@ -94,6 +94,11 @@
   <dependencies>
 
     <dependency>
+        <groupId>org.jboss</groupId>
+        <artifactId>jboss-common-core</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>org.jboss.logging</groupId>
       <artifactId>jboss-logging-spi</artifactId>
       <version>2.2.0.CR1</version>
