--- a/ear/pom.xml
+++ b/ear/pom.xml
@@ -59,13 +59,12 @@
     <dependency>
       <groupId>org.jboss.metadata</groupId>
       <artifactId>jboss-metadata-common</artifactId>
-      <version>7.0.0.Beta26-SNAPSHOT</version>
+      <version>${project.version}</version>
     </dependency>
 
     <dependency>
       <groupId>org.jboss.logging</groupId>
-      <artifactId>jboss-logging-spi</artifactId>
-      <version>2.2.0.CR1</version>
+      <artifactId>jboss-logging</artifactId>
     </dependency>
 
     <!-- Test Dependencies -->
