--- a/web/pom.xml
+++ b/web/pom.xml
@@ -94,13 +94,13 @@
 
         <dependency>
             <groupId>org.jboss.logging</groupId>
-            <artifactId>jboss-logging-spi</artifactId>
-            <version>2.2.0.CR1</version>
+            <artifactId>jboss-logging</artifactId>
         </dependency>
 
         <dependency>
             <groupId>org.jboss.spec.javax.servlet</groupId>
             <artifactId>jboss-servlet-api_3.0_spec</artifactId>
+            <version>1.0.0.Beta2</version>
         </dependency>
 
         <!-- Test Dependencies -->
