--- a/ear/pom.xml
+++ b/ear/pom.xml
@@ -57,9 +57,14 @@
   <dependencies>
 
     <dependency>
+      <groupId>${javax.persistence.groupId}</groupId>
+      <artifactId>${javax.persistence.artifactId}</artifactId>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
       <groupId>org.jboss.metadata</groupId>
       <artifactId>jboss-metadata-common</artifactId>
-      <version>${project.version}</version>
     </dependency>
 
     <dependency>
@@ -72,7 +77,6 @@
     <dependency>
       <groupId>org.jboss.metadata</groupId>
       <artifactId>jboss-metadata-common</artifactId>
-      <version>7.0.0.Beta36-SNAPSHOT</version>
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
@@ -80,21 +84,13 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.4</version>
       <scope>test</scope>
     </dependency>
     
     <dependency>
       <groupId>org.jboss.test</groupId>
       <artifactId>jboss-test</artifactId>
-      <version>1.1.4.GA</version>
       <scope>test</scope>
-      <exclusions>
-          <exclusion>
-              <groupId>apache-log4j</groupId>
-              <artifactId>log4j</artifactId>
-          </exclusion>
-      </exclusions>
     </dependency>
   </dependencies>
 
