--- a/ejb/pom.xml
+++ b/ejb/pom.xml
@@ -84,33 +84,46 @@
    <dependencies>
 
       <dependency>
+         <groupId>${javax.persistence.groupId}</groupId>
+         <artifactId>${javax.persistence.artifactId}</artifactId>
+         <scope>test</scope>
+      </dependency>
+
+      <dependency>
          <groupId>org.jboss.spec.javax.ejb</groupId>
          <artifactId>jboss-ejb-api_3.1_spec</artifactId>
+         <!-- FIXME: up to 1.0.1.Final, but that one has wrong dependencies listed -->
          <version>1.0.0.Final</version>
+         <scope>provided</scope>
       </dependency>
 
       <dependency>
          <groupId>org.jboss.spec.javax.interceptor</groupId>
          <artifactId>jboss-interceptors-api_1.1_spec</artifactId>
          <version>1.0.0.Final</version>
+         <scope>provided</scope>
+      </dependency>
+
+      <dependency>
+          <groupId>org.jboss.spec.javax.jms</groupId>
+          <artifactId>jboss-jms-api_1.1_spec</artifactId>
+          <version>1.0.0.Final</version>
+          <scope>test</scope>
       </dependency>
 
       <dependency>
          <groupId>org.jboss.metadata</groupId>
          <artifactId>jboss-metadata-common</artifactId>
-         <version>${project.version}</version>
       </dependency>
 
       <dependency>
          <groupId>org.jboss.logging</groupId>
          <artifactId>jboss-logging</artifactId>
-         <version>3.0.0.Beta4</version>
       </dependency>
 
       <dependency>
          <groupId>org.jboss.metadata</groupId>
          <artifactId>jboss-metadata-common</artifactId>
-         <version>${project.version}</version>
          <type>test-jar</type>
          <scope>test</scope>
       </dependency>
@@ -118,7 +131,7 @@
       <dependency>
          <groupId>org.jboss.ejb3</groupId>
          <artifactId>jboss-ejb3-ext-api</artifactId>
-         <version>2.0.0-beta-2</version>
+         <version>2.0.0-beta-3</version>
          <scope>provided</scope>
       </dependency>
 
@@ -126,29 +139,23 @@
       <dependency>
          <groupId>junit</groupId>
          <artifactId>junit</artifactId>
-         <version>4.4</version>
          <scope>test</scope>
       </dependency>
 
       <!-- To counter AbstractMethodErrors -->
+      <!--
       <dependency>
          <groupId>org.jboss.logging</groupId>
          <artifactId>jboss-logging-log4j</artifactId>
          <version>2.2.0.CR1</version>
          <scope>test</scope>
       </dependency>
+      -->
 
       <dependency>
          <groupId>org.jboss.test</groupId>
          <artifactId>jboss-test</artifactId>
-         <version>1.1.4.GA</version>
          <scope>test</scope>
-          <exclusions>
-              <exclusion>
-                  <groupId>apache-log4j</groupId>
-                  <artifactId>log4j</artifactId>
-              </exclusion>
-          </exclusions>
       </dependency>
 
    </dependencies>
